[tool.poetry]
name = "asyncz"
version = "0.1.0"
description = ""
authors = ["Zhe Wang <wangzhetju@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
asyncpg = "^0.26.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
